# deepseek_ai_news_crew

./: .gitignore  ENV_CONFIGURATION.md  README.md  README_AUTO_TASK.md  ai_news_daily_task.xml  ai_news_report.md  analyst_prompt.txt  auto_run.py  auto_run_linux.py  crontab_config.txt  pyproject.toml  run_ai_news.bat  run_ai_news.sh  run_and_send.bat  tasks_new.yaml  text2image.py  text2video.py  text2voice_BytedanceTTS.py  text_to_speech.py  window_config.txt
Outputs/: ai_news_report.md  ai_news_report_20250515.md  raw_news_data.json  raw_news_data_20250515.json
aigc/: ai_news_report_20250522.md  airobot.py  audio_video_processor.py  enhancedRobot.py  lengthText.py  long_news_processor.py  main.py  news_processor.py  readme.md  subtitle_manager.py  test.py  text2image_ArkImageGenerator.py  text2voice_BytedanceTTS.py  video_duration_test.py
aigc/V1/: airobot.py  enhancedRobot.py
aigc/V2/: MultimodalRobot.py  TotalVideoWithLLM.py  main.py  segmentTest.py  single_audio_multi_video.py  temp.py  video_concatenator.py
aigc/V3/: main.py  news_processor.py  subtitle_manager.py  text_segmentation.py  video_generation.py
aigc/V4/: audio_processor.py  main.py  subtitle_processor.py  text_segmentation.py  video_concatenator.py  video_generation.py
aigc_project/: llm_client.py  long_news_processor.py  main.py  prompt_builder.py  readme.md  video_concatenator.py
src/deepseek_ai_news_crew/: analyst_config.py  check_env.py  config.py  crew.py  main.py  researcher_config.py  send_to_wechat.py
src/deepseek_ai_news_crew/config/: agents.yaml  tasks.yaml
(+2 files in other folders)
