[project]
name = "deepseek_ai_news_crew"
version = "0.1.0"
description = "deepseek_ai_news_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
deepseek_ai_news_crew = "deepseek_ai_news_crew.main:run"
run_crew = "deepseek_ai_news_crew.main:run"
train = "deepseek_ai_news_crew.main:train"
replay = "deepseek_ai_news_crew.main:replay"
test = "deepseek_ai_news_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
